@@ -782,6 +782,12 @@
                 in the local cvs project or the localWorkingCopy must be
                 set.</td>
             </tr>
+            <tr>
+                <td>resetStickyTags</td>
+                <td>No</td>
+                <td>If set to true the update command will include the -A option
+                which will reset any sticky tags, dates, or -k options.</td>
+            </tr>
             </tbody>
         </table>
         </div>
